changed number 3 text to word

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Git Demo</h1>
 <ul><li>item 1</li>
 <li>item 2</li>
-<li>item 3</li>
+<li>item three</li>
 <li>item 4</li></ul>
 </body>
 </html>
